[package]
name = "stardict"
version = "0.2.2"
edition = "2021"
description = "Rust implement stardict"
authors = ["zang.loo"]
homepage = "https://github.com/zangloo/stardict"
repository = "https://github.com/zangloo/stardict.git"
keywords = ["stardict"]
license = "GPL-2.0-only"
readme = "README.md"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
sled = ["dep:sled"]

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.38", features = ["bundled"], optional = true }

[target.'cfg(unix)'.dependencies]
rusqlite = { version = "0.38", optional = true }

[dependencies]
thiserror = "1.0"
flate2 = "1.0"
byteorder = "1.5"
inflate = "0.4"
sled = { version = "0.34", optional = true }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
process_alive = "0.2"
